[gd_scene load_steps=10 format=3 uid="uid://cq244cu7oma5j"]

[ext_resource type="Texture2D" uid="uid://b8ehphkjs1iwr" path="res://Resources/Sprites/UI/Menus/MenuPanel.png" id="1_ctxny"]
[ext_resource type="Script" path="res://Scenes/Menus/options_menu.gd" id="1_dgmn1"]
[ext_resource type="Theme" uid="uid://w073xaxkj70j" path="res://Themes/menu_theme.tres" id="2_roq4b"]
[ext_resource type="PackedScene" uid="uid://chvldwh2dohef" path="res://Scenes/Menus/MenuComponents/menu_button.tscn" id="3_oy7mo"]
[ext_resource type="Texture2D" uid="uid://cqip7nn1nykbf" path="res://Resources/Sprites/UI/Menus/FSButton1.png" id="4_rfhe7"]
[ext_resource type="Texture2D" uid="uid://b73g3q7gevhe" path="res://Resources/Sprites/UI/Menus/FSButton2.png" id="5_lg6qj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ixj5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7dge6"]
texture = ExtResource("4_rfhe7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p7di2"]
texture = ExtResource("5_lg6qj")

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_dgmn1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_ctxny")
patch_margin_left = 44
patch_margin_top = 32
patch_margin_right = 44
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ButtonHole8" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 156.0
offset_top = 222.0
offset_right = 244.0
offset_bottom = 286.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole7" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 154.0
offset_top = 224.0
offset_right = 246.0
offset_bottom = 284.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_roq4b")
text = "Settings
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MasterHBox" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MasterHBox"]
layout_mode = 2
theme = ExtResource("2_roq4b")
text = "Master"

[node name="MasterSlider" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MasterHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme = ExtResource("2_roq4b")
max_value = 1.0
step = 0.01

[node name="SFXHBox" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/SFXHBox"]
layout_mode = 2
theme = ExtResource("2_roq4b")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/SFXHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme = ExtResource("2_roq4b")
max_value = 1.0
step = 0.01

[node name="MusicHBox" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MusicHBox"]
layout_mode = 2
theme = ExtResource("2_roq4b")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MusicHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme = ExtResource("2_roq4b")
max_value = 1.0
step = 0.01

[node name="FullscreenHBox" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/FullscreenHBox"]
layout_mode = 2
theme = ExtResource("2_roq4b")
text = "Fullscreen"

[node name="Fullscreen Toggle" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/FullscreenHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ixj5")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7dge6")
theme_override_styles/hover = SubResource("StyleBoxTexture_p7di2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7dge6")
theme_override_styles/normal = SubResource("StyleBoxTexture_p7di2")
toggle_mode = true

[node name="Quit Button" parent="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer" instance=ExtResource("3_oy7mo")]
unique_name_in_owner = true
layout_mode = 2
text = "back"

[connection signal="mouse_exited" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MasterHBox/MasterSlider" to="." method="_on_master_slider_mouse_exited"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MasterHBox/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_exited" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/SFXHBox/SFXSlider" to="." method="_on_sfx_slider_mouse_exited"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/SFXHBox/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_exited" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MusicHBox/MusicSlider" to="." method="_on_music_slider_mouse_exited"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/MusicHBox/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/FullscreenHBox/Fullscreen Toggle" to="." method="_on_fullscreen_toggle_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/Quit Button" to="." method="_on_quit_button_pressed"]
